--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,31 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body{
+    overflow-X: hidden;
+}
 .navbar-nav a {
-    color: #ffffff;
-    /* font-weight: bold; */
+    color: #007c9d;
+    font-weight:480;
     font-size: 18px;
-    margin-left: 12px;
-    margin-right: 52px;
+    margin-left: 10px;
+    margin-right: 22px;
+}
+.card-title{
+    color: #007c9d;
+}
+p{
+    font-size: 15px;
+    color:#7c7c7c;
+}
+/* .card .card-flyer:hover img */
+.nav-link:hover{
+    display: block;
+    background-color: #007c9d;
+    border-radius: 3px;
+    color: #ffffff;
 }
 header {
     /* background-color: rgba(98, 131, 150, 255); */
@@ -15,12 +37,14 @@ header {
 }
 .navbar {
     /* height: 75px; */
-    background-color: #a0da87;
+    /* background-color: #1561ad; */
+        background-color: #ffffff;  
     position: relative;
 }
 .logo{
+    margin-left: 13px;
     position: absolute;
-    top: 0px;
+    top: 6px;
 }
 /* .np{     
     background-color: #FFC600;
@@ -37,13 +61,42 @@ h2{
     text-align: center;
     padding-bottom: 30px;
     padding-top: 50px;
-    color: rgba(146, 163, 173, 255);
+    color: #007c9d;
+    /* color: #028885; */
 }
+.one_click h3{
+    color: #007c9d;
+}
+ span{
+    color: #015c5a;
+}
+.one_click p{
+    text-align: left;
+    font-size: 16px;
+}
+.click_abt a{
+    display:inline-block;
+    color: #7c7c7c;
+    padding: 12px 15px;
+    border: 1px solid #007c9d;
+    background-color: #ffffff;
+    text-decoration: none;
+}
+.click_abt a:hover{
+    background-color: #007c9d;
+    color: #ffffff;
+}
+.click_abt{
+    margin-top: 60px;
+}
+
 h3{
     text-align: center;
-    padding-top: 60px;
-    padding-bottom:30px;
-    color: rgb(17, 164, 120);
+    padding-top: 50px;
+    padding-bottom:5px;
+    color: #007c9d;
+    /* color: rgb(17, 164, 120); */
+    /* color: rgb(6, 136, 136); */
 }
 h6{
     font-size: 18px;
@@ -60,19 +113,20 @@ h6 p{
 
 .onimg img {
     position: relative;
-    min-width: 100%;
+    width:85rem;
 }
 
 .onimg h1 {
     position: absolute;
     /* bottom: 300px; */
-    bottom: 200px;
+    bottom: 150px;
     margin-right: 500px;
-    font-size: 80px;
+    font-size: 75px;
     /* left: 40%; */
     justify-content: right;
     /* display: flex; */
-    color: #0aa558;
+    color: #ffffff;
+    /* color: #000000; */
 }
 .onimg span{
     font-size: 70px;
@@ -80,24 +134,44 @@ h6 p{
 }
 
 h1 span {
-    color: rgba(54, 87, 109, 255);
-    /* color: #B1D7B4; */
-        /* color: #810034; */
+    /* color: rgba(54, 87, 109, 255); */
+    color: #015c5a;
+    /* color: #007c9d; */
 }
 .i h1{
-    animation: move;
+    /* animation: move; */
 }
 .onimg span::before {
     content: "by providing you best treatment";
     animation: animate infinite 10s;
     padding-left: 0px;
 }
+.loc
+{
+padding-right:10px;
+}
+.name{
+    padding-left: 10px;
+}
+.loc, .name{
+    width: 600px;
+    /* height: 200px; */
+}
+select{
+    height: 50px;
+}
+.text-area{
+    background-color: #e8faff;
+}
+.search{
+padding-top: 50px;
+}
 @keyframes animate {
-    25% {
+    33% {
         content: "for Your Health Every Moment";
     }
 
-    50% {
+    66% {
         content: "of your time";
     }
 
@@ -105,22 +179,11 @@ h1 span {
         content: "by providing you best treatment";
     }
 }
-@keyframes movem {
-    from {
-        bottom: 0px;
-    }
 
-    to {
-        bottom: 300px;
-    }
-}
 
 
 .clr{
     color: #628396;
-}
-footer{
-    background-color: #a0da87;
 }
 
 /*----  Main Style  ----*/
@@ -180,6 +243,7 @@ footer{
 } */
 .card-text{
     height: 75px;
+    
 }
 .card .card-flyer {
     background: #FFFFFF;
@@ -207,6 +271,23 @@ footer{
 .Useful_link p a{
     text-decoration: none;
 }
+.hospital_card img{
+    width: 200px;
+    height: 115px;
+}
+.hospital_card {
+    height: 270px;
+}
+.card-body{
+    
+}
+.hospital_card:hover {
+    padding: 3px;
+    transform: scale(1);
+    transition-duration: .2s;
+    border-radius: 10px;
+    box-shadow: 2px 2px 4px rgba( 0, 0, 0, 0.2);
+}
 /* .card .card-flyer p {
     margin-top: 0px;
     margin-bottom: 100px;
@@ -225,4 +306,22 @@ footer{
     font-family: 'Roboto Black', sans-serif;
     letter-spacing: 1px;
     color: #00acc1;
-} */
+    */
+    .footer_logo{
+        /* background-color: #007c9d; */
+    }
+    footer{
+    background-color: #028885;
+    }
+    /* i{
+        color: #007c9d;
+    }
+    i:hover{
+        color: #FFFFFF;
+        display: block;
+        
+    }
+    .footer_logo a:hover{
+        background-color: #007c9d;
+                color: #FFFFFF;
+    } */
