--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -5,12 +5,13 @@
     }
 } */
 @media screen and (max-width: 820px) {
-   .onimg h1 {
+    .onimg h1 {
         font-size: 40px;
         margin-bottom: 700px;
         width: 400px;
     }
 }
+
 @media screen and (max-width: 820px) {
     .onimg span {
         font-size: 30px;
@@ -19,37 +20,68 @@
 }
 
 @media screen and (max-width: 600px) {
-    .onimg h1{
+    .onimg h1 {
         font-size: 20px;
-        margin-bottom:500px;
-        
+        margin-bottom: 500px;
+
         width: 150px;
         /* display: inline; */
     }
 }
+
 @media screen and (max-width: 600px) {
-    .onimg  span {
+    .onimg span {
         font-size: 15px;
         margin-bottom: 90%;
     }
-}
-@media screen and (max-width: 400px) {
-    .onimg h1 {
-        font-size: 17px;
+
+    .step .arrow_1 {
+        display: none;
+        height: 5px;
+    }
+
+    .step .arrow_2 {
+        display: none;
+        height: 5px;
+    }
+
+    .works p {
+        /* width: 100px; */
+        /* height: 50px; */
+        display: flex;
+        text-align: center;
+        padding: 0;
+    }
+
+    .step img {
+        /* height: 60px; */
+    }
+
+    .works {
+        height: 100%;
+    }
+
+    @media screen and (max-width: 400px) {
+        .onimg h1 {
+            font-size: 17px;
             margin-bottom: 300px;
             width: 150px;
+        }
+
+
     }
-}
-@media screen and (max-width: 400px) {
-    .onimg span {
-        font-size: 13px;
-        margin-bottom: 90%;
-    }
-/* @media only screen and (max-width: 400px) {
+
+    @media screen and (max-width: 400px) {
+        .onimg span {
+            font-size: 13px;
+            margin-bottom: 90%;
+        }
+
+        /* @media only screen and (max-width: 400px) {
 
     /* For mobile phones: */
-    col {
-        width: 100%;
-    }
+        col {
+            width: 100%;
+        }
 
-} 
+    }
