--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,3 +1,10 @@
+:root {
+    --primary-color: rgba(0, 124, 157, 0.9);
+    --helper-color: rgba(0, 160, 156, 0.9);
+    --background-color: rgb(236, 236, 236);
+    --font-color: #212529;
+}
+
 ul {
     font-size: 18px;
 
@@ -97,9 +104,7 @@ h1 span {
     /* color: var(--primary-color); */
 }
 
-.i h1 {
-    /* animation: move; */
-}
+
 
 .onimg span::before {
     content: "by providing you best treatment";
@@ -124,6 +129,21 @@ h1 span {
 select {
     height: 50px;
 }
+
+/* option :hover {
+    background-color: var(--primary-color);
+} */
+
+option:hover {
+    background-color: var(--helper-color);
+    color: #fff;
+}
+
+option:checked {
+    box-shadow: 0 0 1em 100px var(--primary-color) inset;
+}
+
+
 
 .text-area {
     background-color: #f5f8f9;
@@ -199,13 +219,7 @@ select {
     transform: scale(1.15);
 }
 
-/* .card .card-flyer .text-box {
-    text-align: center;
-} */
 
-/* .card .card-flyer .text-box .text-container {
-    padding: 30px 18px;
-} */
 .card-text {
     height: 75px;
 
@@ -219,12 +233,10 @@ select {
     -ms-transition: all 0.2s ease-in;
     -o-transition: all 0.2s ease-in;
     transition: all 0.2s ease-in;
-    /* box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.40); */
 }
 
 .card .card-flyer:hover {
     background: #ffffff;
-    /* box -shadow: 0px 15px 26px rgba(0, 0, 0, 0.50); */
     box-shadow: 0px 5px 8px 5px rgba(0, 0, 0, 0.50);
     -webkit-transition: all 0.2s ease-in;
     -moz-transition: all 0.2s ease-in;
@@ -232,7 +244,6 @@ select {
     -o-transition: all 0.2s ease-in;
     transition: all 0.2s ease-in;
     margin-top: 5px;
-    /* margin-bottom: 8px; */
 }
 
 .Useful_link p a {
@@ -248,7 +259,6 @@ select {
     height: 270px;
 }
 
-.card-body {}
 
 .hospital_card:hover {
     padding: 3px;
@@ -258,25 +268,9 @@ select {
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
-/* .card .card-flyer p {
-    margin-top: 0px;
-    margin-bottom: 100px;
-    padding-bottom: 0px;
-    font-size: 14px;
-    letter-spacing: 1px;
-    color: #000000;
-} */
 
-/* .card .card-flyer h5 {
-    margin-top: 0px;
-    margin-bottom: 4px;
-    font-size: 18px;
-    font-weight: bold;
-    text-transform: uppercase;
-    font-family: 'Roboto Black', sans-serif;
-    letter-spacing: 1px;
-    color: #00acc1;
-    */
+
+
 /* how it works */
 .works p {
     position: relative;
@@ -309,14 +303,7 @@ select {
     font-weight: 500;
 }
 
-/* .dot {
-    position: relative;
-    height: 180px;
-    width: 180px;
-    background-color: #ffffff;
-    border-radius: 50%;
-    display: inline-block;
-} */
+
 
 .step_img {
     /* position: absolute; */
